Fix spacing in between preview images

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 /*project images*/
 .project_img {
   min-width: 100%;
+  float: left;
 }
 
 /*header*/
